--- a/curriculum_vitae.html
+++ b/curriculum_vitae.html
@@ -20,19 +20,22 @@
     <div class="contenedor">
         <div class="izquierda">
             <div class="imagen">
-                <img src ="D:\programar\practica\cv imagen.jpg" alt="imagen de una chica" id="imagen">
+                <img src ="cv imagen.jpg" alt="imagen de una chica" id="imagen">
             </div>
             <div class="informacion_personal">
                 <h2 class="sobre mi" >Sobre mi</h2>
                 <li>
+                    <span class="icono"><i class="fa fa-calendar" aria-hidden="true"></i></span>
                     <span class="texto">Fecha de nacimiento: </span>
                     <span class="texto">6/5/1988</span>
                 </li>
                 <li>
+                    <span class="icono"><i class="fa fa-map" aria-hidden="true"></i></span>
                     <span class="texto">Lugar de nacimiento: </span>
                     <span class="texto"> Mendoza, Argentina</span>
                 </li>
                 <li>
+                    <span class="icono"><i class="fa fa-map-marker" aria-hidden="true"></i></span>
                     <span class="texto">Direccion: </span>
                     <span class="texto">6845 W Dallas St</span>
                 </li>
@@ -40,12 +43,12 @@
                 <h2 id="contacto">Contacto</h2>
                 <ul>
                     <li>
-                        <span class="icono de telefono"></span>
+                        <span class="icono"><i class="fa fa-phone" aria-hidden="true"></i></span>
                         <span class="texto">(484) 595-294</span>
                     </li>
                     <li>
-                        <span class="icono de email "></span>
-                        <span class="texto">zoey.phillips@example.com</span>
+                        <span class="icono"><i class="fa fa-envelope-o" aria-hidden="true"></i></span>
+                        <span class="texto" >zoey.phillips@example.com</span>
                     </li>
                 </ul>
                 
